Fix button spacing on advsearch

--- a/Koha/Plugin/Com/PerplexedTheta/SENUX/static_files/src/css/senux/senux-opac.scss
+++ b/Koha/Plugin/Com/PerplexedTheta/SENUX/static_files/src/css/senux/senux-opac.scss
@@ -259,6 +259,16 @@
     color: $defaultText
 }
 
+#advsearch_form .action {
+    line-height: 3rem;
+}
+
+@media only screen and (min-width: $breakpoint-pc) {
+    #advsearch_form .action {
+        line-height: inherit;
+    }
+}
+
 //
 //
 // search results
